# Anchor

./: .gitignore  Cargo.toml  README.md  build.rs  projecte.md
src/: app.rs  audio.rs  config.rs  main.rs  timer.rs  window.rs
src/ui/: context_menu.rs  mod.rs  timer_view.rs
